Major restructuring, started lab 2

--- a/Orca/Lab 1/Lab1.ipynb
+++ b/Orca/Lab 1/Lab1.ipynb
@@ -22,6 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "molecules = ['H', 'HOH', 'HO', 'CH3OH', 'CH3O', 'CH2CHOH', 'CH2CHO', 'N2', 'N', 'F2', 'F']\n",
+    "methods = ['HF/Def2-SVP', 'B3LYP/Def2-SVP']\n",
+    "\n",
     "if os.getcwd()[-7:] != 'Results':\n",
     "    os.chdir('Results/')"
    ]
